--- a/subscribe.html
+++ b/subscribe.html
@@ -14,10 +14,10 @@
                 <nav class="nav">
                     <ul class="nav__lists">
                         <li class="nav__item">
-                            <a href="subscribe.html">home</a>
+                            <a href="index.html">home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="subscribe.html">about us</a>
+                            <a href="index.html">about us</a>
                         </li>
                         <li class="nav__item">
                             <a href="subscribe.html">create your plan</a>
@@ -258,10 +258,10 @@
                 <nav class="footer__nav">
                     <ul class="footer__lists">
                         <li class="footer__item">
-                            <a href="subscribe.html">home</a>
+                            <a href="index.html">home</a>
                         </li>
                         <li class="footer__item">
-                            <a href="subscribe.html">about us</a>
+                            <a href="index.html">about us</a>
                         </li>
                         <li class="footer__item">
                             <a href="subscribe.html">Create your plan</a>
