--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
                             <a href="subscribe.html">home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="subscribe.html">about us</a>
+                            <a href="about.html">about us</a>
                         </li>
                         <li class="nav__item">
                             <a href="subscribe.html">create your plan</a>
                         </li>
                     </ul>
+                    <img class="header-icon" src="img/header-icon.svg" alt="links">
                 </nav>
             </div>
         </div>
@@ -133,10 +134,10 @@
                 <nav class="footer__nav">
                     <ul class="footer__lists">
                         <li class="footer__item">
-                            <a href="subscribe.html">home</a>
+                            <a href="index.html">home</a>
                         </li>
                         <li class="footer__item">
-                            <a href="subscribe.html">about us</a>
+                            <a href="about.html">about us</a>
                         </li>
                         <li class="footer__item">
                             <a href="subscribe.html">Create your plan</a>
