--- a/subscribe.html
+++ b/subscribe.html
@@ -17,7 +17,7 @@
                             <a href="index.html">home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="index.html">about us</a>
+                            <a href="about.html">about us</a>
                         </li>
                         <li class="nav__item">
                             <a href="subscribe.html">create your plan</a>
@@ -261,7 +261,7 @@
                             <a href="index.html">home</a>
                         </li>
                         <li class="footer__item">
-                            <a href="index.html">about us</a>
+                            <a href="about.html">about us</a>
                         </li>
                         <li class="footer__item">
                             <a href="subscribe.html">Create your plan</a>
