--- a/about.html
+++ b/about.html
@@ -36,12 +36,62 @@
                     <p class="hero__parag">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
                 </div>
             </section>
-            <section class="commit">
+            <section class="commit commit--before">
                 <div class="commit__content">
                     <h2 class="commit__content-header">Our commitment</h2>
                     <p class="commit__content-parag">We’re built on a simple mission and a commitment to doing good along the way. We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to understand the challenges and opportunities in each of these places. We collaborate with exceptional coffee growers and empower a global community of farmers through with well above fair-trade benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing region.</p>
                 </div>
             </section>
+            <section class="quality">
+                <div class="quality__content">
+                    <h2 class="quality__content-header">Uncompromising quality</h2>
+                    <p class="quality__content-parag">Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.</p>
+                </div>
+            </section>
+            <section class="branch">
+                <div class="branch__content">
+                    <h2 class="brabch__content-header">Our headquarters</h2>
+                    <ul class="branch__list">
+                        <li class="branch__item branch--uk">
+                            <h3 class="branch__item-header">United Kingdom</h3>
+                            <p class="branch__item-info">68  Asfordby Rd<br> Alcaston<br> SY6 1YA<br><a class="brabch__content-tel" href="#"> +44 1241 918425</a></p>
+                        </li>
+                        <li class="branch__item branch--canada">
+                            <h3 class="branch__item-header">Canada</h3>
+                            <p class="branch__item-info">1528 Eglinton Avenue<br> Toronto  <br> Ontario M4P 1A6 <br><a class="brabch__content-tel" href="#">+1 416 485 2997</a></p>
+                        </li>
+                        <li class="branch__item branch--australia">
+                            <h3 class="branch__item-header ">Australia</h3>
+                            <p class="branch__item-info">36 Swanston Street<br>  Kewell <br>  Victoria <br><a class="brabch__content-tel" href="#"> +61 4 9928 3629</a></p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <footer class="footer">
+                <div class="container">
+                    <div class="footer__content">
+                        <img src="img/footer-logo.svg" alt="logo">
+                        <nav class="footer__nav">
+                            <ul class="footer__lists">
+                                <li class="footer__item">
+                                    <a href="index.html">home</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="about.html">about us</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="subscribe.html">Create your plan</a>
+                                </li>
+                            </ul>
+                            <div class="footer__icon">
+                                <img src="img/facebook.svg" alt="icon">
+                                <img src="img/twitter.svg" alt="icon">
+                                <img src="img/insta.svg" alt="icon">
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+            </footer>
         </div>
     </main>
 </body>
