--- a/subscribe.html
+++ b/subscribe.html
@@ -92,7 +92,7 @@
                             <li class="order__rigth-item">
                                 <div class="order__right-selector">
                                     <h2 class="order__right-header">How do you drink your coffee?</h2>
-                                    <button type="button" class="order__right-button1">
+                                    <button type="button" class="order__right-button1 order__right--open">
                                         <img class="arrow1" src="img/arrow1.svg" alt="icon">
                                     </button>
                                     <!-- <button type="button" class="order__right-button2">
